Fix: modal overflow scroll setting, tablet oritation change

--- a/src/assets/style/service/service-tools.scss
+++ b/src/assets/style/service/service-tools.scss
@@ -28,7 +28,7 @@
   display: flex;
   width: fit-content;
   @include tablet {
-    display: none;
+    // display: none;
   }
 }
 
