--- a/src/assets/style/workspace/workspace-layout.scss
+++ b/src/assets/style/workspace/workspace-layout.scss
@@ -1,6 +1,6 @@
 .remote-layout {
   position: relative;
-  min-width: $size_m_max;
+  min-width: $size_tab_min;
   height: 100%;
   overflow: hidden;
   background-color: $color_bg_default;
